--- a/gobotany/static/sass/_site-media-queries.scss
+++ b/gobotany/static/sass/_site-media-queries.scss
@@ -33,7 +33,7 @@
         }
         #sidebar {
             float: none;
-            width: 302px;
+            width: $smallscreen-portrait-box-width;
         }
     }
 }
@@ -63,7 +63,7 @@
             width: 464px;
         }
         #sidebar {
-            width: 462px;
+            width: $smallscreen-landscape-box-width;
         }
     }
 }
@@ -233,9 +233,9 @@
     .content {
         .container {
             padding: 0;
-            &.free-sidebar #sidebar .section {
+            /*&.free-sidebar #sidebar .section {
                 padding-bottom: $sidebar-box-vertical-padding;
-            }
+            }*/
         }
         #main {
             background: none;
@@ -260,15 +260,15 @@
             border: 1px solid $border-green;
             clear: left;
             height: auto;
-            margin-bottom: 14px;
+            /*margin-bottom: 14px;*/
             @include smallscreen-side-margins;
             .section {
-                margin-top: $sidebar-box-vertical-padding;
-                padding-bottom: 0;
+                /*margin-top: $sidebar-box-vertical-padding;*/
+                padding-bottom: $sidebar-box-vertical-padding;
             }
-            .section:first-child {
+            /*.section:first-child {
                 margin-top: 0;
-            }
+            }*/
         }
     }
     .gb-tooltip {
