--- a/gobotany/static/sass/site.scss
+++ b/gobotany/static/sass/site.scss
@@ -31,6 +31,7 @@ $narrower-body-font: Tahoma, "Trebuchet MS", sans-serif;
 $link-green: #508e31;
 $heading-green: #519136;
 $border-green: #c3d941;
+$light-green: #e1f0d1;
 
 $text-color: #000;
 $footer-background-color: #b4d57f;
