Differentiate some names in the CSS.
Make clear the difference between names used for the sign-up
call to action box and the sign-up form page. (#223)

--- a/gobotany/plantshare/templates/plantshare.html
+++ b/gobotany/plantshare/templates/plantshare.html
@@ -26,7 +26,7 @@
     </table>
 </div>
 {% else %}
-<div class="sign-up box">
+<div class="sign-up-call box">
     <h2>Sign up for PlantShare!</h2>
     <p>As a member of PlantShare, you will be able to:<p>
     <ul>
