--- a/gobotany/static/sass/_plantshare.scss
+++ b/gobotany/static/sass/_plantshare.scss
@@ -41,7 +41,7 @@ body.plantshare {
             }
         }
     }
-    .sign-up {
+    .sign-up-call {
         width: 475px;
         ul {
             line-height: 18px;
@@ -178,7 +178,7 @@ body.plantshare {
             background: none;
             border: 0;
         }
-        &#plantshare .sign-up {
+        &#plantshare .sign-up-call {
             width: auto;
             ul {
                 margin-left: 0;
