Add a link to a page for editing the user's profile. (#223)

--- a/gobotany/plantshare/templates/plantshare.html
+++ b/gobotany/plantshare/templates/plantshare.html
@@ -10,6 +10,7 @@
 {% if user.is_authenticated %}
 <div class="profile box">
     <h2>My Profile</h2>
+    <a href="{% url ps-profile %}" class="edit">Edit Profile</a>
     <div>
         <img src="/static/images/icons/avatar-default.png" alt="">
         <h3>{{ user.first_name|default:user.username }}</h3>
