--- a/gobotany/static/sass/_plantshare.scss
+++ b/gobotany/static/sass/_plantshare.scss
@@ -67,6 +67,11 @@ body.plantshare {
         h2 {
             float: left;
         }
+        a.edit {
+            display: block;
+            float: right;
+            padding-top: 12px;
+        }
         h3 {
             font-size: 18px;
         }
