Correct a plain URL to use its named URL instead. (#223)

--- a/gobotany/plantshare/templates/plantshare.html
+++ b/gobotany/plantshare/templates/plantshare.html
@@ -37,7 +37,7 @@
         <li>Ask one of our expert botanists questions</li>
         <li>Share your thoughts and musings with others</li>
     </li>
-    <a href="accounts/register/">Get Started</a>
+    <a href="{% url registration_register %}">Get Started</a>
 </div>
 {% endif %}
 
