--- a/gobotany/plantshare/templates/profile.html
+++ b/gobotany/plantshare/templates/profile.html
@@ -7,6 +7,18 @@
 {% block main_content %}
 <h1>My Profile</h1>
 
+<h2>My Info</h2>
+
+<div class="info box">
+    <img src="/static/images/icons/avatar-default.png" alt="">
+    <table>
+        <tr><th>Total Species</th><td>None</td></tr>
+        <tr><th>Total Locations</th><td>None</td></tr>
+        <tr><th>Checklists</th><td>None</td></tr>
+        <tr><th>Groups</th><td>None</td></tr>
+    </table>
+</div>
+
 {% endblock %}
 
 {% block sidebar_content %}
