Write a custom template tag for navigation and use in the footer.
This fixes the footer links so that they are unlinked when the item
is the current page, but otherwise linked. The custom template tag
allows us to do this simply in the templates rather than repeating
a URL assignment and embedding an if statement for every link. (#249)

--- a/gobotany/site/templates/gobotany/_footer.html
+++ b/gobotany/site/templates/gobotany/_footer.html
@@ -1,3 +1,4 @@
+{% load gobotany_tags %}
         <footer>
             <img src="/static/images/layout/little-plants.png" alt="">
             <div class="container">
@@ -16,8 +17,8 @@
                     {% include "gobotany/_primary_navigation_bottom.html" %}
                     <h6>Legal</h6>
                     <ul class="legal">
-                        <li><a href="{% url site-privacy %}">Privacy Policy</a></li>
-                        <li><a href="{% url site-terms-of-use %}">Terms of Use</a></li>
+                        <li>{% nav_item 'Privacy Policy' site-privacy %}</li>
+                        <li>{% nav_item 'Terms of Use' site-terms-of-use %}</li>
                     </ul>
                 </div>
                 <div class="support">
