--- a/gobotany/site/templates/gobotany/_primary_navigation_bottom.html
+++ b/gobotany/site/templates/gobotany/_primary_navigation_bottom.html
@@ -1,18 +1,19 @@
+{% load gobotany_tags %}
                 <ul id="footer-nav" class="sections">
                     {% url site-home as u %}
-                    <li><a {% ifnotequal request.path u %}href="{{ u }}"{% endifnotequal %}>Home</a></li>
-                    <li><a href="{% url level1 'simple' %}">Simple Key</a></li>
+                    <li>{% nav_item 'Home' site-home %}</li>
+                    <li>{% nav_item 'Simple Key' level1 'simple' %}</li>
                     {% if debug %}
                         {# Development navigation, linking to all as if released #}
-                        <li><a href="{% url ps-main %}">PlantShare</a></li>
-                        <li><a href="{% url level1 'full' %}">Full Key</a></li>
-                        <li><a href="{% url dkey %}">Dichotomous Key</a></li>
+                        <li>{% nav_item 'PlantShare' ps-main %}</li>
+                        <li>{% nav_item 'Full Key' level1 'full' %}</li>
+                        <li>{% nav_item 'Dichotomous Key' dkey %}</li>
                     {% else %}
                         {# Production navigation, with some features unreleased yet #}
-                        <li><a href="{% url plantshare-placeholder %}">PlantShare</a></li>
-                        <li><a href="{% url full-key-placeholder %}">Full Key</a></li>
-                        <li><a href="{% url dich-key-placeholder %}">Dichotomous Key</a></li>
+                        <li>{% nav_item 'PlantShare' plantshare-placeholder %}</li>
+                        <li>{% nav_item 'Full Key' full-key-placeholder %}</li>
+                        <li>{% nav_item 'Dichotomous Key' dich-key-placeholder %}</li>
                     {% endif %}
-                    <li><a href="{% url site-teaching %}">Teaching</a></li>
-                    <li><a href="{% url site-about %}">About</a></li>
+                    <li>{% nav_item 'Teaching' site-teaching %}</li>
+                    <li>{% nav_item 'About' site-about %}</li>
                 </ul>
